--- a/views/classes.html
+++ b/views/classes.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Adagio - Music for Kids</title>
+  </head>
+  <body>
+    <header>
+    </header>
+    <main>
+      <div id="curriculumSidenav">
+        <a href="">Philosophy</a>
+        <a href="">Birth-3</a>
+        <a href="">3-5</a>
+      </div>
+    </main>
+    <footer>
+    </footer>
+  </body>
+</html>
