--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.css">
+    <link rel="stylesheet" href="main.css">
     <title>Adagio - Music for Kids</title>
   </head>
   <body>
