--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
         <h3>Adagio - Music for Kids</h3><!--Change to name of business-->
       </div>
       <div>
-        <ul>
+        <ul><!-- Sticky header -->
           <li>About Us</li><!--Link to lower down this page-->
           <li>Classes</li><!-- Link to other pages -->
           <li>Prospective Families</li>
@@ -22,30 +22,6 @@
       </div>
     </header>
     <main>
-      <div>
-        <img src=""><!--Picture of class-->
-      </div>
-      <div>
-        <h2>Slogan</h2>
-      </div>
-      <div>
-        <a href="">Why Music?</a><!--Links ot other pages, or expanded on this page?-->
-      </div>
-      <div>
-        <a href="">What We Do</a>
-      </div>
-      <div>
-        <a href="">Testimonials</a>
-      </div>
-      <div>
-        <img src=""><!---picture of Jessica goes here-->
-      </div>
-      <div>
-        Jessica's Bio - Mad Skillz
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-        </p>
-      </div>
     </main>
     <footer>
       <div>
