worked on header

--- a/views/prospective.html
+++ b/views/prospective.html
@@ -1,1 +1,33 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Prospective Families at Adagio</title><!--Change to business name-->
+  </head>
+  <body>
+    <header>
+      <!--Use portable sticky header with "PROSPECTIVE" in all caps-->
+      <h2>Thanks for Considering!</h2>
+    </header>
+    <main>
+      <div>
+        Available Classes
+      </div>
+      <div>
+        Tuition and Payment Policies
+      </div>
+      <div>
+        FAQs
+      </div>
+      <div>
+        Ready to Sign Up?
+        <!-- simple contact form from Google Docs -->
+      </div>
+    </main>
+    <footer>
+      <div>
+        <!-- portable footer -->
+      </div>
+    </footer>
+  </body>
+</html>
