--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,7 @@
       </div>
       <div>
         <ul>
-          <li>About Us</li><!--Link to lower down this page-->
+          <li><a href="#Bio">About Us</a></li><!--Link to lower down this page-->
           <li>Classes</li><!-- Link to other pages -->
           <li>Prospective Families</li>
           <li>Current Families</li>
@@ -40,7 +40,7 @@
       <div>
         <img src=""><!---picture of Jessica goes here-->
       </div>
-      <div>
+      <div id=Bio>
         Jessica's Bio - Mad Skillz
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
