worked on header, updated secondary pages

--- a/views/current.html
+++ b/views/current.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Current Families at Adagio</title><!--Change to business name-->
+    <title>Current Families at SKM</title><!--Change to business name-->
   </head>
   <body>
     <header>
@@ -11,25 +11,27 @@
     </header>
     <main>
       <div>
-        Announcements
+        Announcements<!--instructions to get announcements; upgrade as
+          updateable field from text message or facebook feed-->
       </div>
       <div>
-        Calendar
+        Calendar <!--embed Google calendar-->
       </div>
       <div>
-        Payments
+        Payments <!--initially include payment info, upgrade later to online system-->
       </div>
       <div>
         Last Time in Class <!--Updates about "homework" and activities in class-->
       </div>
       <div>
-        Join our Community on <a href="">Facebook</a>
+        Join our Community on
+        <a href="https://www.facebook.com/StapletonKidsMusic/">Facebook</a>
       </div>
       <div>
-        Running Late?
+        Running Late?<!--send text/email to Jessica-->
       </div>
       <div>
-        Feedback
+        Feedback <!--Google form allowing parents to leave feedback-->
       </div>
     </main>
     <footer>
