--- a/views/home.html
+++ b/views/home.html
@@ -23,27 +23,35 @@
     </header>
     <main>
       <div>
-        <img src=""><!--Picture of class-->
+        <img id="classphoto" class="img-fluid" src="../images/SKMherophoto.jpg">
+        <!--Picture of class-->
       </div>
       <div>
-        <h2>Slogan</h2>
+        <h3>Making Kids Musical!</h3><!--slogan-->
       </div>
       <div>
-        <a href="">Why Music?</a><!--Links ot other pages, or expanded on this page?-->
+        <a href="#Why">Why Music?</a><!--Links ot other pages, or expanded on this page?-->
       </div>
       <div>
-        <a href="">What We Do</a>
+        <a href="#What">What We Do</a>
       </div>
       <div>
-        <a href="">Testimonials</a>
+        <a href="#Testimonials">Testimonials</a>
       </div>
       <div>
         <img src=""><!---picture of Jessica goes here-->
       </div>
       <div id=Bio>
-        Jessica's Bio - Mad Skillz
+        <h4>Biography</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+          Jessica Clark is a classically trained clarinet player and music teacher.
+          She holds a Bachelor’s in Music Education from the University of Michigan and a
+          Masters in Clarinet Performance from New York University.
+          She has previously taught band, choir and jazz band in Washington State's Coupeville
+          Middle and High School. She is the proud mother of two daughters, Mariko and Yuna,
+          and out of a desire to spend as much time at home with her girls as possible founded
+          Stapleton Kids Music in 2016. Currently she performs with the Denver Philharmonic
+          Orchestra.
         </p>
       </div>
     </main>
@@ -52,7 +60,7 @@
         Copyright, legal stuff
       </div>
       <div>
-        <a href="">Link to Facebook</a>
+        <a href=" https://www.facebook.com/StapletonKidsMusic/">Link to Facebook</a>
       </div>
     </footer>
   </body>
