--- a/views/prospective.html
+++ b/views/prospective.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Prospective Families at Adagio</title><!--Change to business name-->
+    <title>Prospective Families at Stapleton Kids Music</title><!--Change to business name-->
   </head>
   <body>
     <header>
