--- a/views/classes.html
+++ b/views/classes.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Stapleton Kids Music</title>
-  </head>
-  <body>
-    <header>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css"
+    href="https://necolas.github.io/normalize.css/latest/normalize.css">
+  <link rel="stylesheet" type="text/css" href="https://bootswatch.com/united/bootstrap.css">
+  <link rel="stylesheet" href="main.css">
+  <title>Adagio - Music for Kids</title>
+</head>
+<body>
+  <header>
+  <nav class="navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Adagio</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="home.html">About Us</a></li><!--Link to lower down this page-->
+        <li class="active"><a href="classes.html">Classes</a></li><!-- Link to other pages -->
+        <li><a href="prospective.html">Prospective Families</a></li>
+        <li><a href="current.html">Current Families</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Call Us</a></li>
+            <li><a href="#">Email Us</a></li>
+          </ul>
+        </li>
+      </ul>
+      </div>
+    </nav>
     </header>
-    <main>
+  <main>
       <div id="curriculumSidenav">
         <a href="">Methodology</a>
         <a href="">Birth-18 months</a>
@@ -66,6 +91,16 @@
       </div>
     </main>
     <footer>
+      <div>
+        Copyright, legal stuff
+      </div>
+      <div>
+        <a href=" https://www.facebook.com/StapletonKidsMusic/">Link to Facebook</a>
+      </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
   </body>
 </html>
