--- a/views/prospective.html
+++ b/views/prospective.html
@@ -16,9 +16,9 @@
         <a class="navbar-brand" href="#">Adagio</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="home.html">About Us</a></li><!--Link to lower down this page-->
+        <li><a href="home.html">About Us</a></li><!--Link to lower down this page-->
         <li><a href="classes.html">Classes</a></li><!-- Link to other pages -->
-        <li><a href="prospective.html">Prospective Families</a></li>
+        <li class="active"><a href="prospective.html">Prospective Families</a></li>
         <li><a href="current.html">Current Families</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
