--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
     href="https://necolas.github.io/normalize.css/latest/normalize.css">
   <link rel="stylesheet" type="text/css" href="https://bootswatch.com/united/bootstrap.css">
   <link rel="stylesheet" href="main.css">
-  <title>Adagio - Music for Kids</title>
+  <title>Stapleton Kids Music</title>
 </head>
 <body>
   <header>
@@ -50,12 +50,12 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="well"
+            <div class="well">
               <a href="#What">What We Do</a>
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="well">
+            <div class="well" id="Testimonials">
               <a href="#Testimonials">Testimonials</a>
             </div>
           </div>
