added lorem ipsum, dummy photo to home

--- a/views/current.html
+++ b/views/current.html
@@ -55,7 +55,7 @@
         Running Late?<!--send text/email to Jessica-->
       </div>
       <div>
-        Feedback <!--Google form allowing parents to leave feedback-->
+        Feedback <!--Google form allowing parents to leave feedback, give testimonials-->
       </div>
     </main>
     <footer>
