--- a/main.css
+++ b/main.css
@@ -6,3 +6,9 @@ body {
   max-width: 650px;
   height: auto;
 }
+
+div.well {
+    background-color: #e5eecc;
+    padding: 7px;
+    border: solid 1px #c3c3c3;
+}
