--- a/views/classes.html
+++ b/views/classes.html
@@ -42,11 +42,11 @@
         <h2>Methodology</h2>
         <p>
           The method that I use in all of my classes is based off of  Music Learning Theory.
-          In MLT the focus is on auditation. “Audiation is the foundation of musicianship. It
+          In MLT the focus is on audiation, which "is the foundation of musicianship. It
           takes place when we hear and comprehend music for which the sound is no longer or may
           never have been present. One may audiate when listening to music, performing from
           notation, playing “by ear,” improvising, composing, or notating music”
-          (http://giml.org/mlt/audiation/)
+          <a href="http://giml.org/mlt/audiation/">Click here</a> for more information.
         </p>
         <p>
           Along with lots of repetition of our songs and chants,
@@ -88,6 +88,10 @@
           to explore movement to music with balls, bean bags, rain sticks and more! We will
           work on listening and imitating patterns as well.
         </p>
+      </div>
+      <div>
+        <iframe src="https://calendar.google.com/calendar/embed?src=orkkdebaa011o6ktcoc0trd7qk%40group.calendar.google.com&ctz=America/Denver"
+        style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       </div>
     </main>
     <footer>
