added form to classes.html, sized form and calendar

--- a/views/classes.html
+++ b/views/classes.html
@@ -89,10 +89,18 @@
           work on listening and imitating patterns as well.
         </p>
       </div>
-      <div>
-        <iframe src="https://calendar.google.com/calendar/embed?src=orkkdebaa011o6ktcoc0trd7qk%40group.calendar.google.com&ctz=America/Denver"
-        style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6" id="signupform">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn6xBITeBeZU4rp-j25DpP9OfzEL5QdtYm7-yGHSomWhAUWA/viewform?embedded=true"
+        width="500" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </div>
+      <div class="col-sm-6" id="gcalendar">
+        <iframe src="https://calendar.google.com/calendar/embed?src=orkkdebaa011o6ktcoc0trd7qk%40group.calendar.google.com&ctz=America/Denver"
+        style="border: 10" width="500" height="400" frameborder="0" scrolling="no"></iframe>
+      </div>
+    </div>
+  </div>
     </main>
     <footer>
       <div>
