--- a/views/home.html
+++ b/views/home.html
@@ -9,13 +9,37 @@
   <title>Stapleton Kids Music</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
-  $(document).ready(function(){
-      $("a").click(function(){
-          $("p.this").toggle();
-      });
-  });
+function whyFunction() {
+    var x = document.getElementById('whyMusic');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+  }
+  </script>
+  <script>
+  function whatFunction() {
+    var x = document.getElementById('whatWeDo');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+  }
+  </script>
+  <script>
+  function testimonialFunction() {
+    var x = document.getElementById('Testimonials');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+  }
   </script>
 </head>
+
 <body>
   <header>
   <nav class="navbar-inverse navbar-fixed-top">
@@ -50,8 +74,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <div class="well" id="whyMusic">
-              <a href="#Why">Why Music?</a>
+            <button class="btn btn-info" onclick="whyFunction()">Why Music?</button>
+            <div class="well" id="whyMusic" style="display:none;">
               <p>
                 olutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
                 cubilia Curae; Ut sit amet orci vel mauris blandit vehicula. Nullam quis enim.
@@ -63,8 +87,8 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="well" id="whatWeDo">
-              <a href="#What">What We Do</a>
+            <button class="btn btn-info" onclick="whatFunction()">What We Do</button>
+            <div class="well" id="whatWeDo" style="display:none;">
               <p>
                 olutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
                 cubilia Curae; Ut sit amet orci vel mauris blandit vehicula. Nullam quis enim.
@@ -76,8 +100,8 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="well" id="Testimonials">
-              <a href="#Testimonials">Testimonials</a>
+            <button class="btn btn-info" onclick="testimonialFunction()">Testimonials</button>
+            <div class="well" id="Testimonials" style="display:none;">
               <p>
                 olutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
                 cubilia Curae; Ut sit amet orci vel mauris blandit vehicula. Nullam quis enim.
