--- a/views/classes.html
+++ b/views/classes.html
@@ -33,12 +33,8 @@
     </nav>
     </header>
   <main>
-      <div id="curriculumSidenav">
-        <a href="">Methodology</a>
-        <a href="">Birth-18 months</a>
-        <a href="">3-5</a>
-      </div>
-      <div>
+    <div class="col-sm-12">
+      <div class="well">
         <h2>Methodology</h2>
         <p>
           The method that I use in all of my classes is based off of  Music Learning Theory.
@@ -58,46 +54,57 @@
           own patterns.
         </p>
       </div>
-      <div>
-        <h2>Birth to 18 months</h2>
-        <p>
-          In this class children will begin to explore the wonders of music. With parent
-          assistance we will learn songs and chants, listen to music and move! Students will
-          also have the opportunity to explore shakers, rain sticks and scarves as we listen
-          and move to music. At this age, participation involves mostly just listening and
-          observing as students take in everything around them. Students will listen as we
-          practice patterns given by me and imitated by their adults.
-        </p>
-      </div>
-      <div>
-        <h2>18 months - 3 years</h2>
-        <p>
-          In this class I start to encourage a bit more participation and following directions.
-          As with the littlest ones, parents are involved in this class as well. We will listen,
-          learn songs and chants, and move as we learn. We will explore bean bags, scarves,
-          shakers and more! Students will listen and begin responding to patterns given by me
-          and imitated by their adults.
-        </p>
-      </div>
-      <div>
-        <h2>3 - 5 years</h2>
-        <p>
-          In this class students attend class on their own. Participation is expected at
-          whatever stage your child is at. In this class we do a lot of movement to recordings
-          as well as songs and chants that I will perform. Students will have the opportunity
-          to explore movement to music with balls, bean bags, rain sticks and more! We will
-          work on listening and imitating patterns as well.
-        </p>
-      </div>
+    </div>
       <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="well">
+              <h2>Birth to 18 months</h2>
+              <p>
+                In this class children will begin to explore the wonders of music. With parent
+                assistance we will learn songs and chants, listen to music and move! Students will
+                also have the opportunity to explore shakers, rain sticks and scarves as we listen
+                and move to music. At this age, participation involves mostly just listening and
+                observing as students take in everything around them. Students will listen as we
+                practice patterns given by me and imitated by their adults.
+              </p>
+            </div>
+          </div>
+            <div class="col-sm-4">
+            <div class="well">
+              <h2>18 months - 3 years</h2>
+              <p>
+                In this class I start to encourage a bit more participation and following directions.
+                As with the littlest ones, parents are involved in this class as well. We will listen,
+                learn songs and chants, and move as we learn. We will explore bean bags, scarves,
+                shakers and more! Students will listen and begin responding to patterns given by me
+                and imitated by their adults.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="well">
+              <h2>3 - 5 years</h2>
+              <p>
+                In this class students attend class on their own. Participation is expected at
+                whatever stage your child is at. In this class we do a lot of movement to recordings
+                as well as songs and chants that I will perform. Students will have the opportunity
+                to explore movement to music with balls, bean bags, rain sticks and more! We will
+                work on listening and imitating patterns as well.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+            <div class="container">
         <div class="row">
           <div class="col-sm-6" id="signupform">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn6xBITeBeZU4rp-j25DpP9OfzEL5QdtYm7-yGHSomWhAUWA/viewform?embedded=true"
         width="500" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </div>
       <div class="col-sm-6" id="gcalendar">
-        <iframe src="https://calendar.google.com/calendar/embed?src=orkkdebaa011o6ktcoc0trd7qk%40group.calendar.google.com&ctz=America/Denver"
-        style="border: 10" width="500" height="400" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=orkkdebaa011o6ktcoc0trd7qk%40group.calendar.google.com&amp;color=%23182C57&amp;ctz=America%2FDenver"
+        style="border-width:0" width="500" height="500" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
   </div>
