--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css"
     href="https://necolas.github.io/normalize.css/latest/normalize.css">
   <link rel="stylesheet" type="text/css" href="https://bootswatch.com/united/bootstrap.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../main.css">
   <title>Stapleton Kids Music</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
@@ -42,7 +42,7 @@ function whyFunction() {
 
 <body>
   <header>
-  <nav class="navbar-inverse navbar-fixed-top">
+  <nav class="navbar-inverse navbar-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Adagio</a>
@@ -66,7 +66,9 @@ function whyFunction() {
     </header>
   <main>
     <div class="jumbotron">
+      <div class="ex1">
       <img class="img-responsive" src="../images/SKMherophoto.jpg">
+      </div>
     </div>
       <div>
         <h3>Making Kids Musical!</h3><!--slogan-->
