--- a/views/tuition.html
+++ b/views/tuition.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css"
     href="https://necolas.github.io/normalize.css/latest/normalize.css">
   <link rel="stylesheet" type="text/css" href="https://bootswatch.com/united/bootstrap.css">
-  <link rel="stylesheet" href="main.css">
-  <title>Adagio - Music for Kids</title>
+  <link rel="stylesheet" href="../main.css">
+  <title>Stapleton Kids Music</title>
 </head>
 <body>
   <header>
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="home.html">About Us</a></li><!--Link to lower down this page-->
         <li><a href="classes.html">Classes</a></li><!-- Link to other pages -->
-        <li class="active"><a href="prospective.html">Prospective Families</a></li>
+        <li><a href="prospective.html">Prospective Families</a></li>
         <li><a href="current.html">Current Families</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
@@ -32,34 +32,37 @@
       </div>
     </nav>
     </header>
-    <main>
-      <br>
-      <h2>Thanks for Considering!</h2>
-      <div>
-        Available Classes
-      </div>
-      <div>
-        Tuition and Payment Policies
-      </div>
-      <div>
-        FAQs
-      </div>
-      <div>
-        Ready to Sign Up?
-        <!-- simple contact form from Google Docs -->
-      </div>
-    </main>
-    <footer>
-      <div>
-        Copyright, legal stuff
-      </div>
-      <div>
-        <a href=" https://www.facebook.com/StapletonKidsMusic/">Link to Facebook</a>
-      </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
-  </body>
+
+  <div class="container">
+    <div class="ex1">
+  <div class="well">
+    <h3>Tuition</h3>
+    <p>
+      Tuition is calculated per session, at $15 for each one-hour class.
+      Sessions may be of various lengths, from 8 to 10 classes. So your tuition
+      will be determined when you sign up for a session, and is due in full at
+      that time.
+    </p>
+  </div>
+</div>
+  <div class="well">
+    <h3>Payment FAQs</h3>
+    <p>
+      <b>Can I pay in installments?</b>
+    </p>
+    <p>
+      No. Tuition must be paid in full at the start of a session.
+    </p>
+    <p>
+      <b>Do I get a refund for missing a class?</b>
+    </p>
+    <p>
+      No. Because the tuition is for the entire session, not for individual
+      classes, no refunds or credits are offered if a class is missed.
+    </p>
+  </div>
+  </div>
+</body>
+<footer>
+</footer>
 </html>
