polishing for use in portfolio

--- a/views/tuition.html
+++ b/views/tuition.html
@@ -13,12 +13,12 @@
   <nav class="navbar-inverse navbar-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Adagio</a>
+        <a class="navbar-brand" href="home.html">Stapleton Kids Music</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="home.html">About Us</a></li><!--Link to lower down this page-->
-        <li><a href="classes.html">Classes</a></li><!-- Link to other pages -->
-        <li><a href="prospective.html">Prospective Families</a></li>
+        <li><a href="home.html">About Us</a></li>
+        <li><a href="classes.html">Classes</a></li>
+        <li class="active"><a href="tuition.html">Tuition</a></li>
         <li><a href="current.html">Current Families</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
@@ -35,34 +35,40 @@
 
   <div class="container">
     <div class="ex1">
-  <div class="well">
-    <h3>Tuition</h3>
-    <p>
-      Tuition is calculated per session, at $15 for each one-hour class.
-      Sessions may be of various lengths, from 8 to 10 classes. So your tuition
-      will be determined when you sign up for a session, and is due in full at
-      that time.
-    </p>
+      <div class="well">
+        <h3>Tuition</h3>
+        <p>
+          Tuition is calculated per session, at $15 for each one-hour class.
+          Sessions may be of various lengths, from 8 to 10 classes. So your tuition
+          will be determined when you sign up for a session, and is due in full at
+          that time.
+        </p>
+      </div>
+    </div>
   </div>
-</div>
-  <div class="well">
-    <h3>Payment FAQs</h3>
-    <p>
-      <b>Can I pay in installments?</b>
-    </p>
-    <p>
-      No. Tuition must be paid in full at the start of a session.
-    </p>
-    <p>
-      <b>Do I get a refund for missing a class?</b>
-    </p>
-    <p>
-      No. Because the tuition is for the entire session, not for individual
-      classes, no refunds or credits are offered if a class is missed.
-    </p>
-  </div>
+  <div class="container">
+    <div class="well">
+      <h3>Payment FAQs</h3>
+      <p>
+        <b>Can I pay in installments?</b>
+      </p>
+      <p>
+        No. Tuition must be paid in full at the start of a session.
+      </p>
+      <p>
+        <b>Do I get a refund for missing a class?</b>
+      </p>
+      <p>
+        No. Because the tuition is for the entire session, not for individual
+        classes, no refunds or credits are offered if a class is missed.
+      </p>
+    </div>
   </div>
 </body>
 <footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+  crossorigin="anonymous"></script>
 </footer>
 </html>
