--- a/views/classes.html
+++ b/views/classes.html
@@ -6,19 +6,19 @@
     href="https://necolas.github.io/normalize.css/latest/normalize.css">
   <link rel="stylesheet" type="text/css" href="https://bootswatch.com/united/bootstrap.css">
   <link rel="stylesheet" href="../main.css">
-  <title>Adagio - Music for Kids</title>
+  <title>Stapleton Kids Music</title>
 </head>
 <body>
   <header>
   <nav class="navbar-inverse navbar-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Adagio</a>
+        <a class="navbar-brand" href="home.html">Stapleton Kids Music</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="home.html">About Us</a></li><!--Link to lower down this page-->
         <li class="active"><a href="classes.html">Classes</a></li><!-- Link to other pages -->
-        <li><a href="prospective.html">Prospective Families</a></li>
+        <li><a href="tuition.html">Tuition</a></li>
         <li><a href="current.html">Current Families</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
